--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,6 +1,6 @@
 homeassistant:
   # Name of the location where Home Assistant is running
-  name: Home
+  name: Famille des Ratons
   # Location required to calculate the time the sun rises and sets
   latitude: 48.80569
   longitude: 2.130699
