--- a/configuration.yaml
+++ b/configuration.yaml
@@ -89,36 +89,5 @@ input_select:
 automation: 
   !include includes/automation/modes_effect.yaml
   !include includes/automation/media_playing.yaml
+  !include includes/automation/modes_trigger.yaml
 
-  - alias: "night time"
-    trigger:
-      - platform: time
-        hours: 1
-        minutes: 30
-        seconds: 0
-    action:
-      service: input_select.select_option
-      data:
-        entity_id: input_select.current_mode
-        option: "Nuit"
-      
-  - alias: "day time"
-    trigger:
-      - platform: sun
-        event: sunrise
-    action:
-      service: input_select.select_option
-      data:
-        entity_id: input_select.current_mode
-        option: "Jour"
-
-  - alias: "evening time"
-    trigger:
-      - platform: sun
-        event: sunset
-        offset: "-02:30:00"
-    action:
-      service: input_select.select_option
-      data:
-        entity_id: input_select.current_mode
-        option: "Soir"
