--- a/configuration.yaml
+++ b/configuration.yaml
@@ -16,9 +16,7 @@ media_player:
   !include includes/media_player.yaml
 
 zwave:
-  usb_path: /dev/cuaU0
-  config_path: /usr/local/lib/python3.4/site-packages/libopenzwave-0.3.1-py3.4-freebsd-10.3-RELEASE-amd64.egg/config
-  polling_interval: 60000
+  !include includes/zwave.yaml
 
 device_tracker:
   platform: nmap_tracker
