--- a/configuration.yaml
+++ b/configuration.yaml
@@ -19,10 +19,7 @@ zwave:
   !include includes/zwave.yaml
 
 device_tracker:
-  platform: nmap_tracker
-  hosts: 192.168.0.1/24
-  home_interval: 10
-  track_new_devices: no
+  !include includes/device_tracker.yaml
 
 sensor 2:
   platform: speedtest
