automation: fix includes
multiple includes do no work, the dash created a correct configuration
from a syntax point of view, but the content wasn't actually properly
processed by HA.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -24,9 +24,7 @@ sensor:
   !include includes/sensors.yaml
 
 automation: 
-  - !include includes/automation/modes_effect.yaml
-  - !include includes/automation/media_playing.yaml
-  - !include includes/automation/modes_trigger.yaml
+  !include includes/automation.yaml
 
 #simply enable various components
 discovery:
