lights: add testing relay with mqtt light
Currently on the same device as the bme280, using a homie relay.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -26,6 +26,9 @@ sensor:
 automation: 
   !include includes/automation.yaml
 
+light:
+  !include includes/lights.yaml
+
 #simply enable various components
 discovery:
 logbook:
