--- a/includes/automation/cast_play.yaml
+++ b/includes/automation/cast_play.yaml
@@ -1,4 +1,5 @@
 alias: "chromecast playing"
+hide_entity: True
 trigger:
   - platform: state
     entity_id: media_player.ratoncast
@@ -9,6 +10,6 @@ condition:
     state: Soir
 action:
   service: light.turn_on
-  entity_id: light.fibaro_system_fgd212_dimmer_2_level_3
+  entity_id: light.fibaro_system_fgd212_dimmer_2_level_3_0
   data:
     brightness: 30
