--- a/includes/automation/kodi_play.yaml
+++ b/includes/automation/kodi_play.yaml
@@ -1,4 +1,5 @@
 alias: "Kodi playing"
+hide_entity: True
 trigger:
   - platform: state
     entity_id: media_player.kodi
@@ -11,7 +12,7 @@ condition:
     value_template: '{{ states.media_player.kodi.media_content_type != "video" }}'
 action:
   service: light.turn_on
-  entity_id: light.fibaro_system_fgd212_dimmer_2_level_3
+  entity_id: light.fibaro_system_fgd212_dimmer_2_level_3_0
   data:
     brightness: 30
 
