--- a/includes/automation/kodi_stop.yaml
+++ b/includes/automation/kodi_stop.yaml
@@ -1,4 +1,5 @@
 alias: "Kodi paused/stopped"
+hide_entity: True
 trigger:
   - platform: state
     entity_id: media_player.kodi
@@ -11,6 +12,6 @@ condition:
     value_template: '{{ states.media_player.kodi.media_content_type != "video" }}'
 action:
   service: light.turn_on
-  entity_id: light.fibaro_system_fgd212_dimmer_2_level_3
+  entity_id: light.fibaro_system_fgd212_dimmer_2_level_3_0
   data:
     brightness: 90
