--- a/includes/automation/switch_to_party.yaml
+++ b/includes/automation/switch_to_party.yaml
@@ -1,4 +1,5 @@
 alias: Soiree
+hide_entity: True
 trigger:
   - platform: state
     entity_id: input_select.current_mode
@@ -6,6 +7,6 @@ trigger:
 action:
   service: light.turn_on
   data:
-    entity_id: light.fibaro_system_fgd212_dimmer_2_level_3
+    entity_id: light.fibaro_system_fgd212_dimmer_2_level_3_0
     brightness: 90
 
