--- a/includes/customize.yaml
+++ b/includes/customize.yaml
@@ -1,39 +1,43 @@
 # wall embedded fibaro dimmer
-sensor.fibaro_system_fgd212_dimmer_2_energy_3:
+sensor.fibaro_system_fgd212_dimmer_2_energy_3_0:
   friendly_name: Total Salon
-sensor.fibaro_system_fgd212_dimmer_2_power_3:
+sensor.fibaro_system_fgd212_dimmer_2_power_3_4:
   friendly_name: Instant. Salon 
+sensor.fibaro_system_fgd212_dimmer_2_power_3_8:
+  hidden: true
 sensor.yr_symbol:
   friendly_name: Meteo
-sensor.everspring_ad147_plugin_dimmer_module_alarm_level_2:
+sensor.everspring_ad147_plugin_dimmer_module_alarm_level_2_1:
   hidden: true
-sensor.everspring_ad147_plugin_dimmer_module_alarm_type_2:
+sensor.everspring_ad147_plugin_dimmer_module_alarm_type_2_0:
   hidden: true
-sensor.everspring_ad147_plugin_dimmer_module_power_management_2:
+sensor.everspring_ad147_plugin_dimmer_module_power_management_2_11:
   hidden: true
-sensor.everspring_ad147_plugin_dimmer_module_sourcenodeid_2:
+sensor.everspring_ad147_plugin_dimmer_module_sourcenodeid_2_2:
   hidden: true
-sensor.fibaro_system_fgd212_dimmer_2_alarm_level_3:
+sensor.fibaro_system_fgd212_dimmer_2_alarm_level_3_1:
   hidden: true
-sensor.fibaro_system_fgd212_dimmer_2_alarm_type_3:
+sensor.fibaro_system_fgd212_dimmer_2_alarm_type_3_0:
   hidden: true
-sensor.fibaro_system_fgd212_dimmer_2_heat_3:
+sensor.fibaro_system_fgd212_dimmer_2_heat_3_7:
   hidden: true
-sensor.fibaro_system_fgd212_dimmer_2_power_management_3:
+sensor.fibaro_system_fgd212_dimmer_2_power_management_3_11:
   hidden: true
-sensor.fibaro_system_fgd212_dimmer_2_sourcenodeid_3:
+sensor.fibaro_system_fgd212_dimmer_2_sourcenodeid_3_2:
   hidden: true
-sensor.fibaro_system_fgd212_dimmer_2_system_3:
+sensor.fibaro_system_fgd212_dimmer_2_system_3_12:
+  hidden: true
+sensor.fibaro_system_fgd212_dimmer_2_exporting_3_32:
   hidden: true
 
 # remote dimmer socket plug
-light.everspring_ad147_plugin_dimmer_module_level_2:
+light.everspring_ad147_plugin_dimmer_module_level_2_0:
   friendly_name: Lampadaire
-light.fibaro_system_fgd212_dimmer_2_level_3:
+light.fibaro_system_fgd212_dimmer_2_level_3_0:
   friendly_name: Salon
-light.fibaro_system_fgd212_dimmer_2_level_3_2:
+light.fibaro_system_fgd212_dimmer_2_level_3_0_2:
   hidden: true
-light.fibaro_system_fgd212_dimmer_2_step_size_3:
+light.fibaro_system_fgd212_dimmer_2_step_size_3_6:
   hidden: true
-light.fibaro_system_fgd212_dimmer_2_step_size_3_2:
+light.fibaro_system_fgd212_dimmer_2_step_size_3_6_2:
   hidden: true
