lights/sensors: update mqtt base topic for homie 2.0.0
In Homie 1.5.0 the prefix was devices/ in Homie 2.0.0 prefix will
be homie/. 2.0.0 have support to make a clean deep sleep of ESP
and makes code cleaner, so even if it is not released yet, still
switching to it already.

--- a/includes/lights.yaml
+++ b/includes/lights.yaml
@@ -1,3 +1,3 @@
 - platform: mqtt
-  state_topic: "devices/006500e0/light/on"
-  command_topic: "devices/006500e0/light/on/set"
+  state_topic: "homie/006500e0/light/on"
+  command_topic: "homie/006500e0/light/on/set"
