--- a/includes/lights.yaml
+++ b/includes/lights.yaml
@@ -1,3 +1,3 @@
-- platform: mqtt
-  state_topic: "homie/006500e0/light/on"
-  command_topic: "homie/006500e0/light/on/set"
+#- platform: mqtt
+#  state_topic: "homie/006500e0/light/on"
+#  command_topic: "homie/006500e0/light/on/set"
