--- a/includes/automation/cast_stop.yaml
+++ b/includes/automation/cast_stop.yaml
@@ -7,7 +7,7 @@ trigger:
 condition:
   - condition: state
     entity_id: input_select.current_mode
-    state: Soir
+    state: Film
 action:
   service: light.turn_on
   entity_id: light.fibaro_system_fgd212_dimmer_2_level_3_0
